<resources>
    <string name="hello">点酷</string>
    <string name="app_name">点酷听书</string>
    <string name="tab_bookshelf">我的书架</string>
    <string name="tab_bookmark">书签</string>
    <string name="tab_book_online">旧书市场</string>
    <string name="userName">姓名（建议填写）</string>
    <string name="userNum">手机号码（建议填写）</string>
    <string name="userFeedback">反馈意见（200字以内）</string>
    <string name="hello_world">点酷听书带给你享受。</string>
    <string name="info">提示信息。</string>
    <string name="menu_settings">设置</string>
    <string name="back">返回</string>
    <string name="share">分享</string>
	<string name="suggest">提示</string>
	<string name="ok">确定</string>
	<string name="authorized_success">认证成功</string>
	<string name="authorized_failed">认证失败</string>
	<string name="authorized_cancel">取消认证</string>
	<string name="share_complete">分享成功</string>
	<string name="share_failed"> 分享失败</string>
	<string name="share_cancel">取消分享</string>
	<string name="error">错误</string>
	<string name="sharecontent_not_null">分享url和内容不能为空</string>
	<string name="picsource">图片来源</string>
    <string name="cancel">取消</string>
	<string name="press_exit">再按一次退出Demo</string>
	<string name="get">获  取</string>
	<string name="about">关于</string>
	<string name="feedback">反馈</string>
	<string name="exit">退出</string>
    <string name="version">Version</string>
		<string name="takepicture">照相</string>
	<string name="album">相册</string>
		<string name="error_param">参数错误</string>
		<string name="menu_share">分享</string>
		<string name="menu_feedback">反馈</string>
		<string name="menu_about">本地</string>
		<string name="menu_exit">详情</string>
	<string name="menu_open">打开</string>
	<string name="menu_del">删除</string>
	<string name="menu_des">详情</string>
    <string name="light_novels">近期新品</string>
    <string name="str_history">历史小说</string>
    <string name="str_kehuan">科幻小说</string>
    <string name="str_qita">其他类型</string>
    <string name="str_xuanhuan">玄幻小说</string>
    <string name="originals">评价最高</string>
    <string name="alternative_language">云书架</string>
    <string name="choose">选择</string>
    <string name="all">全部</string>
    <string name="settings">设置</string>
    <string name="title_activity_display_light_novels">轻小说</string>
    <string name="title_activity_display_settings">设置</string>
    <string name="title_activity_light_novel_chapters">轻小说章节</string>
    <string name="title_activity_display_alternative_novels">其他语言</string>
    <string name="title_activity_display_alternative_novel_pager">其他语言列表</string>
    <string name="novel_title">标题</string>
    <string name="novel_cover">封面</string>
    <string name="novel_synopsys"></string>
    <string name="title_activity_display_synopsys">小说介绍</string>
    <string name="title_activity_display_novel_content">小说内容</string>
    <string name="invert_colors">翻转颜色</string>
    <string name="title_activity_display_image">查看图片</string>
    <string name="novel_last_update">最后更新</string>
    <string name="novel_chapter">小说章节</string>
    <string name="novel_chapter_dl">(详情)</string>
    <string name="list_empty">没有内容</string>
    <string name="service_name">更新服务</string>
    <string name="tts_service_name">语音服务</string>
    <string name="hint_search">搜索</string>
    <string name="teasers">小说列表</string>
    <string name="search">搜索</string>
    <string name="novel_only">小说</string>
    <string name="task_loading">任务正在执行&#8230;</string>
    <string name="jump_last_read">最后阅读</string>
    <string name="title_activity_display_bookmark">书签</string>
    <string name="main_activity_menu">主菜单</string>
    <string name="title_activity_download_list">加载列表</string>
    <string name="downloadsList">加载</string>
    <string name="title_activity_download_list_adapter">加载列表</string>
    <string name="title_activity_display_novel_pager">轻小说列表</string>
    <string name="title_activity_update_history">更新</string>
    <string name="language_selection">语言选择</string>
    <string name="current_value">当前值</string>
    <string name="set">集合</string>
    <string name="cancel_task">取消任务: </string>
    <string name="bakatsuki_message">同意我们的使用协议:\n\n</string>
    <string name="bakatsuki_copyrights">快乐阅读吧\n</string>
    <string name="content_refresh">刷新内容</string>
    <string name="content_previous">前一章</string>
    <string name="content_next">后一章</string>
    <string name="content_toc">跳转到</string>
    <string name="content_search">搜索</string>
    <string name="content_bookmark">关于章节的书签</string>
    <string name="bookmarks">书签</string>
    <string name="download_list">加载列表</string>
    <string name="details_refresh">刷新</string>
    <string name="details_download_all">加载所有章节</string>
    <string name="novel_list_refresh">刷新</string>
    <string name="novel_list_manual_add">手动添加</string>
    <string name="novel_list_download_all">加载所有信息</string>
    <string name="update_interval_summary">更新主体介绍: %1$s</string>
    <string name="update_interval_title">升级数量</string>
    <string name="selected_mode">选择模式: %1$s</string>
    <string name="selected_language">选择语言: %1$s.\n.</string>
    <string name="last_run">最后运行: %1$s\n状态: %2$s</string>
    <string name="none">空</string>
    <string name="unknown">未知</string>
    <string name="download_image_to">加载图片并保存到: %1$s</string>
    <string name="novel_database_to">小说数据库保存到: %1$s</string>
    <string name="copyright">点酷听书 版权所有</string>
    <string name="not_copyright">不能取得版权页面.</string>
    <string name="run_update_text">点击更新</string>
    <string name="use_sound_summary">章节更新是闹铃.</string>
    <string name="use_sound_title">使用铃声</string>
    <string name="use_vibration_summary">章节更新时震动.</string>
    <string name="use_vibration_title">使用震动</string>
    <string name="persist_notification_summary">点击之后提醒.</string>
    <string name="persist_notification_title">点酷听书，新书提醒</string>
    <string name="consolidate_notification_summary">更新历史.</string>
    <string name="consolidate_notification_title">单一提示</string>
    <string name="general_preference">通用设置</string>
    <string name="UI_selection_title">主题选择</string>
    <string name="invert_color_summary">选择自体或者背景颜色</string>
    <string name="invert_color_title">翻转颜色</string>
    <string name="lock_horizontal_summary">屏幕锁定</string>
    <string name="lock_horizontal_title">锁定竖屏</string>
    <string name="auto_download_chapter_summary">Automatically adds a chapter to the download list when touched, if it hasn\'t been downloaded yet.</string>
    <string name="auto_download_chapter_title">Touch for Download</string>
    <string name="alphabet_order_summary">Novel list is always ordered by alphabet.</string>
    <string name="alphabet_order_title">Alphabetical Order</string>
    <string name="show_missing_summary">Show missing chapter (marked with red color).</string>
    <string name="show_missing_title">Show Missing Chapters</string>
    <string name="show_external_summary">Show external chapter (marked with blue color icon).</string>
    <string name="show_external_title">Show External Chapters</string>
    <string name="use_internal_webview_summary">Handle external link with internally, rather than using browser.</string>
    <string name="use_internal_webview_title">Use Internal WebView</string>
    <string name="strech_detail_image_summary">Makes the cover for the novel fit the screen (with insets) instead of it\'s original size.</string>
    <string name="strech_detail_image_title">Resize Cover</string>
    <string name="reading_layout">Reading Layout</string>
    <string name="show_images_summary">Controls if images are displayed or not (for performance).</string>
    <string name="show_images_title">Show Images</string>
    <string name="enable_zoom_summary">Enable zoom in novel contents.</string>
    <string name="enable_zoom_title">Enable Zoom</string>
    <string name="show_zoom_control_summary">Show zoom button in the novel contents, doesn\'t affect the zooming function.</string>
    <string name="show_zoom_control_title">Show Zoom Control</string>
    <string name="show_webview_summary">Enable dynamic buttons while scrolling the chapter.</string>
    <string name="show_webview_title">Dynamic Buttons</string>
    <string name="keep_awake_summary">Keeps the screen on when on chapter screen.</string>
    <string name="keep_awake_title">Keep Awake</string>
    <string name="use_volume_to_scroll_summary">Use volume rocker for scrolling when for novel contents.</string>
    <string name="use_volume_to_scroll_title">Use Volume Rocker for Scrolling</string>
    <string name="scroll_size_summary">Scrolling size for volumer rocker.</string>
    <string name="scroll_size_summary2">Scrolling size for volume rocker (%1$s)</string>
    <string name="scroll_size_title">Scrolling Size</string>
    <string name="invert_scroll_summary">Invert scrolling direction for volumer rocker.</string>
    <string name="invert_scroll_title">Invert Scroll Direction</string>
    <string name="fullscreen_summary">Use fullscreen when reading.</string>
    <string name="fullscreen_title">Use Fullscreen</string>
    <string name="enable_bookmark_summary">Enable bookmark feature when reading.</string>
    <string name="enable_bookmark_title">Enable Bookmark</string>
    <string name="css_layout_title">CSS Layouts</string>
    <string name="custom_css_title">Use Custom CSS</string>
    <string name="custom_css_summary">Use custom CSS for reading. Reload chapter to take effect (including changing the css path).</string>
    <string name="custom_css_path_title">Custom CSS Path</string>
    <string name="custom_css_path_summary">Path to Custom CSS to be used for reading.</string>
    <string name="force_justified_title">Force Justified</string>
    <string name="force_justified_summary">Force justified text for novel content. Reload the chapter to take effect.</string>
    <string name="line_spacing_title">Line Spacing</string>
    <string name="line_spacing_summary">Increases the space between lines. The greater the number, the more padding it has. Reload the chapter to take effect.</string>
    <string name="line_spacing_dialog_content">Please enter the desired number of your line spacing in percentage. (Default is 150%)</string>
    <string name="line_spacing_dialog_title">Line Spacing</string>
    <string name="line_spacing_summary2">Increases the space between lines. The greater the number, the more padding it has.</string>
    <string name="margin_title">Margins</string>
    <string name="margin_summary">Increases the space from the text and the edge of the screen. Reload the chapter to take affect.</string>
    <string name="margin_dialog">Please enter the desired margin in percentage of screen space. Don\'t forget that this affects the left and right margin. (Default is 5%)</string>
    <string name="margin_summary2">Increases the space between the text and the edge of the screen.</string>
    <string name="storage">Storage</string>
    <string name="clear_database_summary">Erases the light novel database.</string>
    <string name="clear_database_title">Clear Novel Database</string>
    <string name="backup_database_summary">Creates a backup of the light novel database at the root of the device\'s internal storage.</string>
    <string name="backup_database_title">Create Novel Database Backup</string>
    <string name="restore_database_summary">Restores a light novel database backup previously created from the root of the device\'s internal storage.</string>
    <string name="restore_database_title">Restore Novel Database Backup</string>
    <string name="clear_cache_summary">Clears cached images</string>
    <string name="clear_cache_title">Clear Image Cache</string>
    <string name="save_location_title">Image Save Location</string>
    <string name="db_location_title">Database Save Location</string>
    <string name="download_big_image_summary">Download linked full resolution image. *Will* take a lot of space.</string>
    <string name="download_big_image_title">Download Full-Res Image</string>
</resources>