<?xml version="1.0" encoding="utf-8" ?> 
<TabHost 
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:id="@android:id/tabhost" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent">
 	<LinearLayout 
		android:orientation="vertical" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		>
	<FrameLayout 
	  	    android:id="@android:id/tabcontent" 
	  	    android:layout_width="fill_parent" 
	  	    android:layout_height="0.0dip" 
	  	    android:layout_weight="1.0" 
	  	    /> 
  		<TabWidget 
  		    android:id="@android:id/tabs" 
  		    android:visibility="gone" 
  		    android:layout_width="fill_parent" 
  		    android:layout_height="wrap_content" 
  		    android:layout_weight="0.0" /> 
 		<RadioGroup 
			android:orientation="horizontal" 
			android:id="@+id/main_radio" 
			android:background="@drawable/tabbar" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			>
  			<RadioButton 
  			    android:checked="true" 
  			    android:id="@+id/radio_button0" 
  			    android:layout_marginTop="2.0dip" 
  			    style="@style/main_tab" 
  			    android:background="@drawable/bg_tab_middle"
  			    android:text="@string/tab_bookshelf"
  			    android:gravity="center"
  			    android:layout_marginLeft="5dp"
  			    android:textColor="@color/black_color"
  			    android:layout_weight="1"
  			    /> 
  			<RadioButton 
  			    android:id="@+id/radio_button1" 
  			    android:layout_marginTop="2.0dip" 
  			    style="@style/main_tab" 
  			    android:text="@string/tab_bookmark"
  			    android:gravity="center"
  			    android:layout_marginRight="5dp"
  			    android:layout_marginLeft="5dp"
  			    android:background="@drawable/bg_tab_middle"
  			    android:textColor="@color/black_color"
  			    android:layout_weight="1"
  			    /> 
  			<RadioButton 
  			    android:id="@+id/radio_button2" 
  			    android:layout_marginTop="2.0dip" 
  			    style="@style/main_tab" 
  			    android:text="@string/tab_book_online"
  			    android:gravity="center"
  			    android:layout_marginRight="5dp"
  			    android:background="@drawable/bg_tab_middle"
  			    android:textColor="@color/black_color"
  			    android:layout_weight="1"
  			    /> 
  		</RadioGroup>

  	</LinearLayout>
</TabHost>